# XCell

./: .gitignore  Cargo.toml  Readme.md  package.json
.github/workflows/: rust.yml  (+1 more)
projects/serde-types/: Cargo.toml
projects/serde-types/src/: lib.rs
projects/serde-types/src/about_vector/: mod.rs
projects/serde-types/src/parsing/: der.rs  errors.rs  mod.rs
projects/serde-types/src/query/: der.rs  errors.rs  mod.rs
projects/serde-types/src/standard/: mod.rs
projects/serde-types/tests/: main.rs
projects/stream-io/: Cargo.toml
projects/stream-io/src/: lib.rs
projects/stream-io/src/standard/: mod.rs
projects/stream-io/src/standard/reader/: mod.rs
projects/stream-io/src/standard/writer/: mod.rs
projects/xcell-cli/: Cargo.toml  Readme.md  build.rs  package.json
projects/xcell-cli/src/: lib.rs  main.rs  utils.rs  workspace.rs
projects/xcell-core/: Cargo.toml
projects/xcell-core/src/: XCellTemplate.toml  lib.rs
projects/xcell-core/src/codegen/: mod.rs
projects/xcell-core/src/codegen/binary/: mod.rs
projects/xcell-core/src/codegen/csv/: mod.rs
projects/xcell-core/src/codegen/readable/: mod.rs
projects/xcell-core/src/codegen/unity/: DefineInterface.cs  ElementField.cs  PartBase.cs  PartBinary1.cs  PartBinary2.cs  PartClass.cs  PartClass.cs.j2  PartDictionary.cs.djv  PartElement1.cs  PartEnum.cs  PartEnumerate.cs.djv  PartInterface.cs  PartManager.cs  PartManager.cs.djv  PartManager.cs.j2  PartManager.cs.saha  PartNamespace.cs  Table.cs  WriteClone.cs  WriteCsField.cs  config.rs  config.toml  mod.rs  write_cs.rs
projects/xcell-core/src/codegen/xml/: DataContract.xml  DataContract.xml.jinja  DataContract.xml.saha  mod.rs
projects/xcell-core/src/config/: ProjectConfig.json  ProjectConfig.toml  XCellTemplate.toml  der.rs  mod.rs
projects/xcell-core/src/config/merge_rules/: der.rs  mod.rs
projects/xcell-core/src/config/project/: der.rs  mod.rs  ser.rs
projects/xcell-core/src/config/table/: TableConfig.toml  der.rs  mod.rs
projects/xcell-core/src/config/typing/: der.rs  mod.rs
projects/xcell-core/src/config/unity/: UnityCodegen.toml  der.rs  mod.rs
projects/xcell-core/src/errors/: for_calamine.rs  for_std.rs  for_tera.rs  for_toml.rs  mod.rs
projects/xcell-core/src/find_table/: mod.rs
projects/xcell-core/src/typing/: array.rs  boolean.rs  color.rs  custom.rs  decimal.rs  display.rs  integer.rs  mod.rs  string.rs  time.rs  vector.rs
projects/xcell-core/src/typing/decimal/: mod.rs
projects/xcell-core/src/typing/integer/: kind.rs  mod.rs  parse_cell.rs
projects/xcell-core/src/utils/: mod.rs
projects/xcell-core/src/utils/comment/: mod.rs
projects/xcell-core/src/utils/visitors/: mod.rs
projects/xcell-core/src/utils/watcher/: mod.rs
projects/xcell-core/src/utils/workspace/: mod.rs
projects/xcell-core/src/x_table/: mod.rs
projects/xcell-core/src/x_table/class/: item.rs  mod.rs
projects/xcell-core/src/x_table/comment/: mod.rs
projects/xcell-core/src/x_table/config/: der.rs  mod.rs
projects/xcell-core/src/x_table/config/project/: ProjectConfig.toml  mod.rs
projects/xcell-core/src/x_table/config/table/: mod.rs
projects/xcell-core/src/x_table/config/unity/: mod.rs
projects/xcell-core/src/x_table/data/: mod.rs
projects/xcell-core/src/x_table/data/class/: mod.rs
projects/xcell-core/src/x_table/data/dictionary/: mod.rs
projects/xcell-core/src/x_table/data/enumerate/: mod.rs
projects/xcell-core/src/x_table/data/language/: mod.rs
projects/xcell-core/src/x_table/dictionary/: data.rs  mod.rs
projects/xcell-core/src/x_table/enumerate/: data.rs  linker.rs  manager.rs  mod.rs
projects/xcell-core/src/x_table/export/: mod.rs
projects/xcell-core/src/x_table/global_config/: mod.rs
projects/xcell-core/src/x_table/header/: mod.rs
projects/xcell-core/src/x_table/language/: id.rs  item.rs  manager.rs  mod.rs  table.rs
projects/xcell-core/src/x_table/meta_info/: der.rs  mod.rs
projects/xcell-core/src/x_table/table/: calamine_table.rs  display.rs  headers.rs  mod.rs  rows.rs
projects/xcell-core/src/x_table/table_config/: mod.rs
projects/xcell-core/src/x_table/typing/: mod.rs
projects/xcell-core/tests/: main.rs
projects/xcell-core/tests/test_buffer/: Buff.toml  BuffTable.cs  BuffTable.toml  BufferTable.cs  RarityType.cs  RarityTypeTable.cs  mod.rs
projects/xcell-errors/: Cargo.toml
projects/xcell-errors/src/: lib.rs
projects/xcell-errors/src/errors/: for_calamine.rs  for_std.rs  for_toml.rs  mod.rs
projects/xcell-errors/src/for_3rd/: for_async_walkdir.rs  for_bigdecimal.rs  for_calamine.rs  for_chrono.rs  for_csscolorparser.rs  for_globset.rs  for_notify.rs  for_num.rs  for_serde.rs  for_serde_json.rs  for_tera.rs  for_toml.rs  for_walkdir.rs  mod.rs
projects/xcell-gui/: Cargo.toml
projects/xcell-gui/src/: lib.rs  main.rs
projects/xcell-gui/src/logger/: mod.rs
projects/xcell-types/: Cargo.toml
projects/xcell-types/src/: errors.rs  lib.rs  utils.rs
projects/xcell-types/src/array/: kind.rs  mod.rs  parse_cell.rs
projects/xcell-types/src/boolean/: der.rs  mod.rs
projects/xcell-types/src/codegen/: mod.rs
projects/xcell-types/src/codegen/csharp_ffi/: default.rs  mod.rs
projects/xcell-types/src/custom/: mod.rs
projects/xcell-types/src/decimal/: kind.rs  mod.rs  parse_cell.rs
projects/xcell-types/src/enumerate/: mod.rs
projects/xcell-types/src/integer/: kind.rs  mod.rs  parse_cell.rs
projects/xcell-types/src/language/: der.rs  mod.rs
projects/xcell-types/src/parser/: mod.rs
projects/xcell-types/src/string/: der.rs  mod.rs
projects/xcell-types/src/typing/: boolean.rs  der.rs  display.rs  enumerate.rs  mod.rs  parser.rs  string.rs  time.rs
projects/xcell-types/src/typing/integer/: mod.rs
projects/xcell-types/src/typing/parser/: mod.rs
projects/xcell-types/src/value/: boolean.rs  color.rs  custom.rs  display.rs  enumerate.rs  mod.rs  string.rs  time.rs
projects/xcell-types/src/value/boolean/: der.rs  mod.rs
projects/xcell-types/src/value/convert/: binary.rs  mod.rs
projects/xcell-types/src/vector/: der.rs  mod.rs  parse_cell.rs
projects/xcell-types/tests/: main.rs
(+2 files in other folders)
