[package]
name = "serde-types"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Types definition for xcell"
repository = "https://github.com/oovm/XCell"
documentation = "https://docs.rs/xcell-types"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }


[dev-dependencies]


[build-dependencies]

[features]
default = []
csharp = []