[package]
name = "stream-io"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Types definition for xcell"
repository = "https://github.com/oovm/XCell"
documentation = "https://docs.rs/xcell-types"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
byteorder = "1.4.3"
concat-idents = "1.1.4"



[dev-dependencies]


[build-dependencies]

[features]
default = []
csharp = []
