[package]
name = "xcell"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/XCell"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"


[dependencies]
log = "0.4.17"
env_logger = "0.9.3"
colored = "2.0.0"
chrono = "0.4.23"
clap = { version = "4.0.26", features = ["derive"] }
tokio = { version = "1.22.0", features = ["full"] }

[dependencies.xcell-core]
#version = "0.0.0"
path = "../xcell-core"

[dev-dependencies]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "XCell.exe"
LegalCopyright = "Copyright © 2020"

[features]
default = []
