[package]
name = "xcell-core"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/XCell"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"


[dependencies]
log = "0.4.17"
calamine = "0.19.1"
convert_case = "0.6.0"
toml = "0.5.9"
serde_json = "1.0.87"
pathdiff = "0.2.1"
tera = "1.17.1"
regex = "1.7.0"
twox-hash = "1.6.3"
serde = { version = "1.0.147", features = ["derive"] }
num = { version = "0.4.0", features = ["serde"] }
itertools = "0.10.5"
array2d = { version = "0.2.1", features = ["serde"] }
notify = { version = "5.0.0", features = ["serde"] }
#futures = "0.3.17"
tokio = { version = "1.21.2", features = ["full"] }

[dependencies.xcell-errors]
#version = ""
path = "../xcell-errors"
features = ["tera", "toml", "globset", "async-walkdir", "notify"]

[dependencies.xcell-types]
#version = ""
path = "../xcell-types"
features = ["csharp"]

[dependencies.sled-typed]
#version = ""
git = "https://github.com/oovm/disk-map"
rev = "0c4cc29b"

[dev-dependencies]
env_logger = "0.9.3"




[build-dependencies]
peginator = "0.3.0"

[features]
default = []
