[package]
name = "xcell-core"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "XCell core library"
repository = "https://github.com/oovm/XCell"
documentation = "https://docs.rs/xcell-core"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"


[dependencies]
log = "0.4.17"
calamine = "0.19.1"
convert_case = "0.6.0"
toml = "0.5.10"
serde_json = "1.0.91"
pathdiff = "0.2.1"
tera = "1.17.1"
regex = "1.7.0"
twox-hash = "1.6.3"
serde = { version = "1.0.152", features = ["derive"] }
itertools = "0.10.5"
notify = { version = "5.0.0", features = ["serde"] }
#futures = "0.3.17"
tokio = { version = "1.23.0", features = ["full"] }
integer-encoding = "3.0.4"

[dependencies.xcell-errors]
version = "0.1.2"
path = "../xcell-errors"
features = ["tera", "toml", "globset", "async-walkdir", "notify", "num"]

[dependencies.xcell-types]
version = "0.2.1"
path = "../xcell-types"
features = ["csharp"]

[dev-dependencies]
env_logger = "0.10.0"

[build-dependencies]
peginator = "0.6.0"

[features]
default = []
