[package]
name = "xcell-errors"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/XCell"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
diagnostic = "0.3.10"
calamine = { version = "0.19.1", optional = true }
tera = { version = "1.17.1", optional = true }
toml = { version = "0.5.9", optional = true }

[dev-dependencies]

[features]
default = []
