[package]
name = "xcell-gui"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/XCell"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
iced = "0.5.2"
log = "0.4.17"

[dev-dependencies]

[features]
default = []
