[package]
name = "xcell-gui"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/XCell"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
iced = "0.5.2"
log = { version = "0.4.17", features = ["std"] }
regex = "1.7.0"

[dev-dependencies]

[features]
default = []
