[package]
name = "xcell-types"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/XCell"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }

[dependencies.xcell-errors]
#version = ""
path = "../xcell-errors"
features = ["num", "bigdecimal", "chrono", "csscolorparser"]


[dev-dependencies]


[build-dependencies]

[features]
default = []
